# Render-Engine

./: .gitmodules  CMakeLists.txt  README.md
include/: Enums.h  RenderEngine.h
include/opengl/: GlRenderEngine.h  GlShader.h
include/vulkan/: Buffer.h  Image.h  LoadAssets.h  PresentPass.h  Utils.h  Vertex.h  VkGraphicsPass.h  VkRenderEngine.h  VmaUniqueAllocator.h
src/: RenderEngine.cpp  RenderEngine.h  Shader.h  main.cpp
src/opengl/: GlRenderEngine.cpp  GlShader.cpp
src/shaders/: compile.bat  tri.frag  tri.frag.spv  tri.vert  tri.vert.spv
src/vulkan/: LoadAssets.cpp  PresentPass.cpp  Utils.cpp  VMAImpl.cpp  VkGraphicsPass.cpp  VkRenderEngine.cpp
